# CAD

./: CMakeLists.txt  Makefile  Readme.md  main.cc
BaseClass/: coordinates.h  figure.cc  figure.h
Figures/Circle/: circle.cc  circle.h
Figures/Ellips/: ellips.cc  ellips.h
Figures/Helix/: helix.cc  helix.h
Randomazer/: randomazer.cc  randomazer.h
